@@ -1,13 +1,23 @@
 package com.macedo.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
+
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import com.macedo.dto.CourseDTO;
+import com.macedo.dto.CoursePageDTO;
 import com.macedo.dto.mapper.CourseMapper;
 import com.macedo.exception.RecordNotFoundException;
 import com.macedo.model.Course;
 import com.macedo.repository.CourseRepository;
+
+import jakarta.validation.constraints.Max;
+import jakarta.validation.constraints.Positive;
+import jakarta.validation.constraints.PositiveOrZero;
 
 @Service
 public class CourseService {
@@ -20,11 +30,10 @@ public class CourseService {
         this.courseMapper = courseMapper;
     }
 
-    public List<CourseDTO> list() {
-        return courseRepository.findAll()
-                .stream()
-                .map(courseMapper::toDTO)
-                .toList();
+      public CoursePageDTO list(@PositiveOrZero int page, @Positive @Max(100) int pageSize) {
+        Page<Course> pageCourse = courseRepository.findAll(PageRequest.of(page, pageSize));
+        List<CourseDTO> courses = pageCourse.get().map(courseMapper::toDTO).collect(Collectors.toList());
+        return new CoursePageDTO(courses, pageCourse.getTotalElements(), pageCourse.getTotalPages());
     }
 
     public CourseDTO findById(Long id) {
